# excel-gen-eval

./: .gitignore  LICENSE  README.md  eval_config.sample.yaml  pyproject.toml
docs/: eval-coverage-strategy.md
examples/accounting-amortization/: case.yaml
examples/accounting-financials/: case.yaml
examples/accounting-music-tour/: case.yaml
examples/comparison-pricing-strategy/: case.yaml
examples/compliance-grants-analysis/: case.yaml
examples/compliance-scra-questions/: case.yaml
examples/data-processing-transactions/: case.yaml
examples/finance-correlation-matrix/: case.yaml
examples/finance-orchestra-comp/: case.yaml
examples/finance-roth-conversion/: case.yaml
examples/finance-theatre-cba/: case.yaml
examples/financial-npv-headlamp/: case.yaml
examples/gdpval-0fad6023-general-and-operations-manager/: case.yaml
examples/gdpval-1137e2bb-order-clerks/: case.yaml
examples/gdpval-1752cb53-first-line-supervisors-of-prod/: case.yaml
examples/gdpval-327fbc21-first-line-supervisors-of-non-/: case.yaml
examples/gdpval-3f821c2d-first-line-supervisors-of-non-/: case.yaml
examples/gdpval-40a8c4b1-first-line-supervisors-of-offi/: case.yaml
examples/gdpval-40a99a31-industrial-engineers/: case.yaml
examples/gdpval-41f6ef59-medical-secretaries-and-admini/: case.yaml
examples/gdpval-4b98ccce-medical-secretaries-and-admini/: case.yaml
examples/gdpval-4d61a19a-general-and-operations-manager/: case.yaml
excel_eval/: __init__.py  cli.py  config.py  models.py  pipeline.py
scripts/: download_gdpval.py  download_ssbv1.py  download_ssbv2.py
(+111 files in other folders)
